--- a/index.html
+++ b/index.html
@@ -15,22 +15,18 @@
 <body>
     <div id="container">
         <header id="heading"><h1>To-do List</h1></header>
+        <p class="error-message"></p>
         <div class="input_container">
             <form action="" id="form">
-                <input type="text" id="inputfield" placeholder="Tasks">
+                <input type="text" id="inputfield" placeholder="Tasks" maxlength="50">
                 <button type="submit" id="addtask">ADD</button>
             </form>
             
         </div>
         <div class="output_container">
-            <div class="task">Laundry</div>
-            <div class="task">Dishes</div>
-            <div class="task checked">Take out Trash</div>
-            <div class="task">Wash Car</div>
-            <div class="task">Cook Dinner</div>
-            <div class="task checked">Walk the Dog</div>
+            
         </div>
     </div>
     <script src="main.js"></script>
 </body>
-</html><i class="fas fa-check"></i><i class="fas fa-times"></i>
+</html>
