Prettier configs / Finished Project

--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans+Condensed:ital,wght@0,300;1,300&family=Quicksand:wght@700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans+Condensed:ital,wght@0,300;1,300&family=Quicksand:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/323f47796f.js" crossorigin="anonymous"></script>
-
+    <script
+      src="https://kit.fontawesome.com/323f47796f.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Todo App</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="container">
-        <header id="heading"><h1>To-do List</h1></header>
-        <p class="error-message"></p>
-        <div class="input_container">
-            <form action="" id="form">
-                <input type="text" id="inputfield" placeholder="Tasks" maxlength="50">
-                <button type="submit" id="addtask">ADD</button>
-            </form>
-            
-        </div>
-        <div class="output_container">
-            
-        </div>
+      <header id="heading"><h1>To-do List</h1></header>
+      <p class="error-message"></p>
+      <div class="input_container">
+        <form action="" id="form">
+          <input
+            type="text"
+            id="inputfield"
+            placeholder="Tasks"
+            maxlength="50"
+          />
+          <button type="submit" id="addtask">ADD</button>
+        </form>
+      </div>
+      <div class="output_container"></div>
     </div>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
